Remove height of 100% to correct overflow of services section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -229,7 +229,6 @@ h1{
 /***** Services *****/
 
 .services{
-  height: 100%;
   width: 100%;
   margin: auto;
   text-align: center;
